tests/ui/recv-borrow-endpoint-alias.stderr
error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/recv-borrow-endpoint-alias.rs:36:22
   |
33 |     let payload = futures::executor::block_on(endpoint.recv::<g::Msg<7, FramePayload>>())
   |                                               -------- first mutable borrow occurs here
...
36 |     let send_again = endpoint.send::<g::Msg<8, u8>>(&next_payload);
   |                      ^^^^^^^^ second mutable borrow occurs here
37 |     core::hint::black_box(&send_again);
38 |     core::hint::black_box(&payload);
   |                           -------- first borrow later used here
